--- a/index.html
+++ b/index.html
@@ -13,21 +13,152 @@
 </head>
 
 <body>
-<header class="header">
-    <a href="index.html" >
-        <img class="header__logo" src="./img/logo.png" alt="Logotipo de la tienda">
-    </a>
-</header>
-<nav class="navegacion">
-    <a class="navegacion__enlace navegacion__enlace--activo" href="./index.html">Tienda</a>
-    <a class="navegacion__enlace" href="./pages/nosotros.html">Nosotros</a>
-</nav>
-<main class="contenedor">
-    <h1>Nuestros productos</h1>
-</main>
-<footer class="footer">
-    <p class="footer__texto">Frontend Store Todos los derechos reservados 2024.</p>
-</footer>
+    <header class="header">
+        <a href="index.html">
+            <img class="header__logo" src="./img/logo.png" alt="Logotipo de la tienda">
+        </a>
+    </header>
+    <nav class="navegacion">
+        <a class="navegacion__enlace navegacion__enlace--activo" href="./index.html">Tienda</a>
+        <a class="navegacion__enlace" href="./pages/nosotros.html">Nosotros</a>
+    </nav>
+    <main class="contenedor">
+        <h1>Nuestros productos</h1>
+    </main>
+    <div class="grid">
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/1.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">VueJS</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/2.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">Angular JS</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/3.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">ReactJS</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/4.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">Redux</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/5.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">Node.JS</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/6.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">SASS</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/7.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">HTML5</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/8.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">GitHub</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/9.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">BulmaCSS</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/10.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">TypeScript</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/11.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">Drupal</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/12.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">JavaScript</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/13.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">GraphQL</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="producto">
+            <a href="./pages/productos.html">
+                <img class="producto__imagen" src="./img/14.jpg" alt="imagen remera">
+            </a>
+            <div>
+                <p class="producto__nombre">WordPress</p>
+                <p class="producto__precio">$25</p>
+            </div>
+        </div> <!--FIN CLASE PRODUCTO-->
+        <div class="grafico grafico--camisas">
+        </div>
+        <div class="grafico grafico--node"></div>
+    </div>
+    <footer class="footer">
+        <p class="footer__texto">Frontend Store Todos los derechos reservados 2024.</p>
+    </footer>
 </body>
 
 </html>
