finalizacion pagina nosotros y ajuste de media query

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,21 +13,58 @@
 </head>
 
 <body>
-<header class="header">
-    <a href="../index.html" >
-        <img class="header__logo" src="../img/logo.png" alt="Logotipo de la tienda">
-    </a>
-</header>
-<nav class="navegacion">
-    <a class="navegacion__enlace " href="../index.html">Tienda</a>
-    <a class="navegacion__enlace navegacion__enlace--activo" href="./nosotros.html">Nosotros</a>
-</nav>
-<main class="contenedor">
-    <h1>Nuestros productos</h1>
-</main>
-<footer class="footer">
-    <p class="footer__texto">Frontend Store Todos los derechos reservados 2024.</p>
-</footer>
+    <header class="header">
+        <a href="../index.html">
+            <img class="header__logo" src="../img/logo.png" alt="Logotipo de la tienda">
+        </a>
+    </header>
+    <nav class="navegacion">
+        <a class="navegacion__enlace " href="../index.html">Tienda</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="./nosotros.html">Nosotros</a>
+    </nav>
+    <main class="contenedor">
+        <h1>Sobre Nosotros</h1>
+        <div class="nosotros">
+            <div class="nosotros__informacion">
+                <p>In hac habitasse platea dictumst. Aliquam mattis commodo erat, et porttitor neque sodales non. Donec vehicula ultrices tellus non pretium. Fusce leo nisi, fringilla quis ligula in, tincidunt aliquet eros. Sed bibendum tempus porttitor. Aenean quis orci a neque convallis feugiat. Nam ultricies, augue eget cursus accumsan, neque massa facilisis est, at venenatis leo diam vitae nibh.</p>
+                <p>Vestibulum non purus hendrerit, convallis tortor viverra, congue ex. Quisque lacinia risus quis tortor elementum porta. Aenean nec neque id augue egestas faucibus. Integer nisi ante, interdum id feugiat ac, finibus nec tellus. Maecenas rutrum consequat gravida. Nullam dapibus dui non mattis faucibus. Nulla aliquet ligula vitae hendrerit fermentum. Aliquam suscipit non neque eget dignissim. </p>
+            </div>
+            <img class="nosotros__imagen" src="../img/nosotros.jpg" alt="imagen de recurso humano">
+        </div>
+    </main>
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">
+            ¿Por qué comprar con nosotros?
+        </h2>
+        <div class="bloques">
+            <div class="bloque">
+                <img class="bloque__imagen" src="../img/icono_1.png" alt="por que comprar">
+                <h3 class="bloque__titulo">El mejor precio</h3>
+                <p>Nulla aliquet ligula vitae hendrerit fermentum. Aliquam suscipit non neque eget dignissim.</p>
+            </div> <!--.bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="../img/icono_2.png" alt="por que comprar">
+                <h3 class="bloque__titulo">Para devs</h3>
+                <p>Nulla aliquet ligula vitae hendrerit fermentum. Aliquam suscipit non neque eget dignissim.</p>
+            </div> <!--.bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="../img/icono_3.png" alt="por que comprar">
+                <h3 class="bloque__titulo">Envio gratis</h3>
+                <p>Nulla aliquet ligula vitae hendrerit fermentum. Aliquam suscipit non neque eget dignissim.</p>
+            </div> <!--.bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="../img/icono_4.png" alt="por que comprar">
+                <h3 class="bloque__titulo">La mejor calidad</h3>
+                <p>Nulla aliquet ligula vitae hendrerit fermentum. Aliquam suscipit non neque eget dignissim.</p>
+            </div> <!--.bloque-->
+        </div><!--.bloques-->
+    </section>
+    <footer class="footer">
+        <p class="footer__texto">Frontend Store Todos los derechos reservados 2024.</p>
+    </footer>
 </body>
 
 </html>
